src/styles/App.css
#root {
  max-width: 1280px;
  margin: 0;
  padding: 0;
}

.main-bg {
  padding: 10px 80px;
}

/* css for gallery component */
.g-container {
  background: white;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.g-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.5rem;
  font-weight: 600;
  padding: 0 2rem;
}

.g-title h2 {
  padding-top: 0.2rem;
}

.g-line {
  width: 100%;
  border: 0.5px solid #ccc;
}

.g-lower {
  padding: 0 2rem;
}

.g-item {
  padding: 2rem 0;
}

.g-gallery {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 20px;
  background-color: #fff;
}

.g-img {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid #ccc;
  border-radius: 10px;
  cursor: pointer;
}

.g-img:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

.g-img:first-child {
  grid-column: 1 / 3;
  grid-row: 1/3;
}

.g-img img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}

.g-img:hover::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 10px;
  opacity: 0;
  transition: opacity 0.2s;
}

.g-img:hover::before {
  opacity: 1;
}

.g-upload-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 1px dashed #ccc;
  border-radius: 10px;
  cursor: pointer;
}

.g-upload .g-up-icon {
  font-size: 3rem;
  color: #ccc;
  cursor: pointer;
}

.g-add-img {
  font-size: 1.2rem;
  font-weight: 600;
  color: #ccc;
  text-transform: uppercase;
}

.g-checkbox {
  display: none;
}

.g-img input[type='checkbox'] {
  position: absolute;
  left: 10px;
  top: 10px;
  cursor: pointer;
  z-index: 10;
  transform: scale(1.5);
}

.g-img:hover .g-checkbox {
  display: block;
}

.selected {
  opacity: 0.6;
}

.g-dtl-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 5px;
  background-color: #FF6969;
  color: #fff;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  transition: all 0.2s;
}

/* responsive design medium size screen */
@media screen and (max-width: 1024px) {
  .g-container {
    padding: 0;
  }

  .g-title {
    padding: 0 1rem;
  }

  .g-lower {
    padding: 0 1rem;
  }

  .g-gallery {
    grid-template-columns: repeat(4, 1fr);
  }

  .g-img:first-child {
    grid-column: 1 / 3;
    grid-row: 1/2;
  }
}

/* responsive design small size screen */
@media screen and (max-width: 768px) {
  .g-container {
    padding: 0;
  }

  .g-title {
    padding: 0 1rem;
    font-size: 12px;
  }

  .g-dtl-btn {
    font-size: 12px;
  }

  .g-upload {
    font-size: 12px;
  }

  .g-add-img {
    font-size: 12px;
  }

  .g-lower {
    padding: 0 1rem;
  }

  .g-gallery {
    grid-template-columns: repeat(3, 1fr);
  }

  .g-img:first-child {
    grid-column: 1 / 2;
    grid-row: 1/2;
  }
}

/* responsive design extra small size screen */
@media screen and (max-width: 480px) {
  .g-container {
    padding: 0;
  }

  .g-title {
    padding: 0 1rem;
  }

  .g-lower {
    padding: 0 1rem;
  }

  .g-gallery {
    grid-template-columns: repeat(2, 1fr);
  }

  .g-img:first-child {
    grid-column: 1 / 2;
    grid-row: 1/2;
  }
}

